course/tobi/static/tobi/style.css
/*
 * CSS Tobi web site 
 * Author : Thomas Boutry <thomas.boutry@x3rus.com>
 * Description :
 *  Create look for the web site , 
 *
 * Ref Color are orignaly inspired by :a
 * http://www.dtelepathy.com/blog/inspiration/beautiful-color-palettes-for-your-next-web-project
 *
 * Color use : 
 *  dark red (bourgogne) : D93240
 *  dark blue grey : 638CA6
 *  light blue grey  :  BFD4D9
 *  dark green bleu (turquoise fonce): 0F5959
 *  light green blue (turquoise claire) : 17A697
 *
 */
body, html {
    height: 100%;
    margin: 0;
    overflow:hidden; 
    font-family: helvetica;
    font-weight: 100;
    background: #000000;
}
.container {
    position: relative;
    height: 100%;
    width: 100%;
    left: 0;
    -webkit-transition:  left 0.4s ease-in-out;
    -moz-transition:  left 0.4s ease-in-out;
    -ms-transition:  left 0.4s ease-in-out;
    -o-transition:  left 0.4s ease-in-out;
    transition:  left 0.4s ease-in-out;
}

.container.open-sidebar {
    left: 140px;
}

.infobar.open-sidebar {
    left: 340px;
}

.listes_activity {
/*   overflow: auto;  */
}

/*#.swipe-area {
    position: absolute;
    width: 50px;
    left: 0;
    top: 0;
    height: 100%;
    background: #f3f3f3;
    z-index: 0;
}

#*/

#infobar {
    position: absolute;
    right -340px;
    background: #000000;
    width: 340px;
    height: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

#sidebar {
    position: absolute;
    left: -140px;
    background: #000000;
    width: 140px;
    height: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}
#sidebar ul {
    margin: 0;
    padding: 0;
    list-style: none;
}
#sidebar ul li {
    margin: 0;
}
#sidebar ul li a {
    padding: 15px 20px;
    font-size: 16px;
    font-weight: 100;
    color: white;
    text-decoration: none;
    display: block;
    border-bottom: 1px solid #98A026;
    -webkit-transition:  background 0.3s ease-in-out;
    -moz-transition:  background 0.3s ease-in-out;
    -ms-transition:  background 0.3s ease-in-out;
    -o-transition:  background 0.3s ease-in-out;
    transition:  background 0.3s ease-in-out;
}
#sidebar ul li:hover a {
    background: #98A026;
}
.main-content {
    width: 100%;
    height: 100%;
    padding: 10px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    position: relative;
    background-color: #000000;
    color : #ffffff;
    border-left-color: #98A026;
    border-right-color: #000000;
    border-top-color: #000000;
    border-bottom-color: #000000;
    border-style: solid;
    overflow-y: auto;
    overflow-x: hidden;
}
.main-content .content{
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding-left: 60px;
    width: 100%;
}
.main-content .content h1{
    font-weight: 100;
}
.main-content .content p{
    width: 100%;
    line-height: 160%;
}
.main-content #sidebar-toggle {
    background: #98A026;
    border-radius: 3px;
    display: block;
    position: relative;
    padding: 10px 7px;
    float: left;
}
.main-content #sidebar-toggle .bar{
    display: block;
    width: 18px;
    margin-bottom: 3px;
    height: 2px;
    background-color: #fff;
    border-radius: 1px;   
}
.main-content #sidebar-toggle .bar:last-child{
    margin-bottom: 0;   
}

.sidebar-info{
    background: #000;
    width: 650px;
    height: 100%;
    border-radius: 3px;
    display: block;
    position: absolute;
    padding: 10px 7px;
    float: right;
    right: -450px;
    border-left-color: #000;
    border-right-color: #000000;
    border-top-color: #E1B902;
    border-bottom-color:  #E1B902;
    border-style: solid;
}

.sidebar-info .bar{
    display: block;
    width: 18px;
    margin-bottom: 3px;
    height: 2px;
    background-color: #fff;
    border-radius: 10px;   
}

.expanded_full_sidebar-info {right: 0px;}
.collapsed_full_sidebar-info {right: -645px;}


/* Formulaire */

.form_tobi{
    width: 800px;
    font-size: 16px;
    background: #000;
/*    padding: 30px 30px 15px 30px;
    border: 5px solid #53687E;*/
}
.form_tobi input[type=submit],
.form_tobi input[type=button],
.form_tobi input[type=text],
.form_tobi input[type=email],
.form_tobi textarea,
.form_tobi label
{
    font-family: Georgia, "Times New Roman", Times, serif;
    font-size: 16px;
    color: #fff;

}
.form_tobi label {
    display:block;
    margin-bottom: 10px;
}
.form_tobi label > span{
    display: inline-block;
/*    float: left; */
    width: 150px;
}
.form_tobi input[type=text],
.form_tobi input[type=email]
{
    background: transparent;
    border: none;
    border-bottom: 1px dashed #83A4C5;
    width: 275px;
    outline: none;
    padding: 0px 0px 0px 0px;
    font-style: italic;
}
.form_tobi textarea{
    font-style: italic;
    padding: 0px 0px 0px 0px;
    background: transparent;
    outline: none;
    border: none;
    border-bottom: 1px dashed #83A4C5;
    width: 375px;
 /*   overflow: hidden;*/
    resize:none;
    height:20px;
}

.form_tobi textarea:focus,
.form_tobi input[type=text]:focus,
.form_tobi input[type=email]:focus,
.form_tobi input[type=email] :focus
{
    border-bottom: 1px dashed #D9FFA9;
}

.form_tobi input[type=submit],
.form_tobi input[type=button]{
    background: #658230;
    border: none;
    padding: 8px 10px 8px 10px;
    border-radius: 5px;
    color: #fff;
}
.form_tobi input[type=submit]:hover,
.form_tobi input[type=button]:hover{
background: #E1B902;
}

